# code

./: .gitignore  a.out  assign  assign.c  assignmentG  assignmentG.c  assignmentVG  assignmentVG.c  bitwiseop  calculator  calculator2  calculator2.c  dodo.c  ex1.c  ex11.c  ex12  ex12.c  ex13  ex16.c  ex17  ex17.c  ex19  ex19.c  ex2.c  ex20.c  ex21  ex21.c  ex22  ex22.c  ex23  ex23.c  ex24.c  ex25  ex26  ex26.c  ex27.c  ex28.c  ex29  ex30.c  ex31.c  (+24 more)
CAN/ex/: frdm_mcxn236.overlay  prj.conf
CAN/loopback/: CMakeLists.txt  frdm_mcxn236.overlay
CAN/network/: README.md
Continous_Integeration/exercise-1/: Makefile
Continous_Integeration/exercise-2/: Makefile
Continous_Integeration/exercise-3/: CMakeLists.txt  greet.cpp  test.cpp
Continous_Integeration/exercise-4/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  LinkedListTest.cpp
Continous_Integeration/exercise-5/: CMakeLists.txt  queue.h  queue.tpp  test_queue.cpp
Python/: test.py
Python/exercises/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py
assigment_I2C/.west/: config
assigment_Parham/: CircularQueue.h  Makefile  test_CircularQueue.cpp
assigment_Parham/README/: README.md
assigmentt/: CircularQueue.h  test_CircularQueue.cpp
ble_bluetooth/connectable/: CMakeLists.txt  sdkconfig.esp32-c6-devkitc-1
c++/: ex17  ex17.cpp
c++/exemples/: 1-race-cond  1-race-cond.cpp  10-ping-pong  11-cond_variable  12-ping-pong  13-ping-pong  14-volatile-shared  2-atomic  2-atomic.cpp  3-mutex  3-mutex.cpp  4-performance  5-recursive_mutex  6-shared_mutex  7-mutex-locks  8-shared_lock  9-lock_strategies  9-lock_strategies.cpp  main
c++/exercises/: ex1  ex1.cpp  ex10  ex10.cpp  ex11  ex11.cpp  ex12  ex12.cpp  ex13  ex13.cpp  ex14  ex14.cpp  ex15  ex16  (+75 more)
exam/: exam_program
examm/: exam.cpp  exerciseee.cpp  producer_consumer
exercise/: ex11  ex18.c  ex19.c  ex2.c  ex26.c  ex30  ex31  ex32.c  ex34  ex34.c  ex35  ex35.c  ex36  ex38  ex39.c  ex39_program  ex39main.c  ex39program  ex40.h  ex40main.c  ex40program  ex41.c  ex42main.c  ex42program  ex43.c  ex_9  test_program
mqtt-client/: CMakeLists.txt  README.md
testing/assignment_parham/test/: CMakeLists.txt
testing/assignment_parham/test/test_button/: bsp.c  bsp.h  test.c
training_exemple/: ascending.c  ascending_program  ascendingmain.c  bank_acc.c  bank_main.c  ex37  ex37.c  fileexemple  fileexemple.c  filemng  filemng.c  func.c  koskalak.c  linkedlist  linkedlist.c  linkedlist_program  pointer  q.c  q.h  queue_program  readfile.c  readfile_program  stck.h  stck_program  stensax  stensax.c  string.c  string.h  string_main.c  string_program  text.txt  tower  tower.c
unity/: Makefile
(+310 files in other folders)
